# SPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Codeforces/: 104174-C-2.cpp  104174-C.cpp  104174-D.cpp  104174D.cpp  1056C.cpp  1475C.cpp  1612C.cpp  1733C.cpp  1733D1.cpp  1766C.cpp  1769C2.cpp  1790E.cpp  1832C.cpp  1838C.cpp  1840D.cpp  1845C.cpp  1862-A.cpp  1881D.cpp  1883B.cpp  1883C.cpp  1902C.cpp  1903B.cpp  1905C.cpp  1907B.cpp  1907D.cpp  1915-F.cpp  1915C.cpp  1916B.cpp  1918-C.cpp  1919C.cpp  1925D.cpp  1927-C.cpp  1927-D.cpp  1927-E.cpp  1927-F.cpp  1927A.cpp  1928B.cpp
Codeforces/1929/: 1929A.cpp  1929B.cpp  1929C.cpp  1929D.cpp  1929E.cpp
Codeforces/1931/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
hse-2023/: A.cpp
info/: 5680.cpp
itmo/: 7.cpp  itmo1.cpp  itmo2.cpp  itmo3.cpp  itmo4.cpp  itmo5.cpp  itmo6.cpp
itmo/18_19/: 3_18_19.cpp  6_18_19.cpp  itmo_realisation_5.cpp
itmo/19_20/: itmo_realisation_4.cpp
itmo/20_21/: itmo_realisation_3.cpp
itmo/21_22/: itmo_realisation_2.cpp
itmo/22_23/: itmo_realisation_1.cpp
mosh/: mosh-B.cpp  mosh-C.cpp  mosh-C2.cpp  mosh-E-solution.txt  mosh-E.cpp  output.txt
tmp/: 1.cpp  2.cpp  prime_numbers.cpp
yandex/: 1.cpp  2.cpp  3ya.cpp  4ya.cpp  5ya.cpp
Вузак/: Vuzak-A.cpp  Vuzak-B.cpp  Vuzak-C.cpp  Vuzak-D.cpp  Vuzak-E.cpp  Vuzak-F.cpp
ИОИП/: IOIP_A.cpp  IOIP_A_2018.cpp  IOIP_B.cpp  IOIP_B_2018.cpp  IOIP_C.cpp  IOIP_D.cpp
Когнитивные технологии/: B.cpp
Предпроф/: PP_A.cpp  PP_B.cpp
