cmake_minimum_required(VERSION 3.22)
project(SPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(SPP main.cpp)

add_executable(104174 Codeforces/104174C.cpp)
add_executable(104174-2 Codeforces/104174C-2.cpp)
add_executable(B "Когнитивные технологии/B.cpp")
add_executable(B2 Codeforces/1931/B.cpp)
add_executable(1915-C Codeforces/1915C.cpp)
add_executable(1918-C Codeforces/1918C.cpp)
add_executable(104174-D Codeforces/104174D.cpp)
add_executable(1927-A Codeforces/1927A.cpp)
add_executable(1927-C Codeforces/1927C.cpp)
add_executable(1927-D Codeforces/1927D.cpp)
add_executable(1927-E Codeforces/1927E.cpp)
add_executable(1927-F Codeforces/1927F.cpp)
add_executable(1862-A Codeforces/1862A.cpp)
add_executable(A hse-2023/A.cpp)
add_executable(A2 Codeforces/1931/A.cpp)

add_executable(1 tmp/1.cpp)
add_executable(1902C Codeforces/1902C.cpp)
add_executable(1881D Codeforces/1881D.cpp)
add_executable(prime_numbers tmp/prime_numbers.cpp)

add_executable(C Codeforces/1931/C.cpp)
add_executable(D Codeforces/1931/D.cpp)
add_executable(E Codeforces/1931/E.cpp)
add_executable(F Codeforces/1931/F.cpp)