cmake_minimum_required(VERSION 3.22)
project(SPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(SPP main.cpp)

add_executable(104174 Codeforces/104174C.cpp)
add_executable(104174-2 Codeforces/104174C-2.cpp)
add_executable(B "Когнитивные технологии/B.cpp")
add_executable(B2 Codeforces/1931/B.cpp)
add_executable(1915-C Codeforces/1915C.cpp)
add_executable(1918-C Codeforces/1918C.cpp)
add_executable(104174-D Codeforces/104174D.cpp)
add_executable(1927-A Codeforces/1927A.cpp)
add_executable(1927-C Codeforces/1927C.cpp)
add_executable(1927-D Codeforces/1927D.cpp)
add_executable(1927-E Codeforces/1927E.cpp)
add_executable(1927-F Codeforces/1927F.cpp)
add_executable(1862-A Codeforces/1862A.cpp)
add_executable(A hse-2023/A.cpp)
add_executable(A2 Codeforces/1931/A.cpp)

add_executable(1 tmp/1.cpp)
add_executable(1902C Codeforces/1902C.cpp)
add_executable(1881D Codeforces/1881D.cpp)
add_executable(prime_numbers tmp/prime_numbers.cpp)

add_executable(C Codeforces/1931/C.cpp)
add_executable(D Codeforces/1931/D.cpp)
add_executable(E Codeforces/1931/E.cpp)
add_executable(F Codeforces/1931/F.cpp)
add_executable(Vuzak-A Вузак/Vuzak-A.cpp)
add_executable(Vuzak-B Вузак/Vuzak-B.cpp)
add_executable(Vuzak-C Вузак/Vuzak-C.cpp)
add_executable(Vuzak-D Вузак/Vuzak-D.cpp)
add_executable(Vuzak-E Вузак/Vuzak-E.cpp)
add_executable(Vuzak-F Вузак/Vuzak-F.cpp)
add_executable(1916B Codeforces/1916B.cpp)
add_executable(1929A Codeforces/1929/1929A.cpp)
add_executable(1929B Codeforces/1929/1929B.cpp)
add_executable(1929C Codeforces/1929/1929C.cpp)
add_executable(1929D Codeforces/1929/1929D.cpp)
add_executable(1929E Codeforces/1929/1929E.cpp)

add_executable(IOIP_A ИОИП/IOIP_A.cpp)
add_executable(IOIP_B ИОИП/IOIP_B.cpp)
add_executable(IOIP_C ИОИП/IOIP_C.cpp)
add_executable(IOIP_D ИОИП/IOIP_D.cpp)
add_executable(1925D Codeforces/1925D.cpp)
add_executable(1907D Codeforces/1907D.cpp)
add_executable(mosh-B mosh/mosh-B.cpp)
add_executable(1612C Codeforces/1612C.cpp)